# cookiecutter-pypackage-minimal

./: .gitignore  Makefile  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: .gitignore  README.md  playground.ipynb  pyproject.toml
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
